@@ -8,6 +8,7 @@
 <li>Custom status messages. A maximum of 64 characters will be imposed.</li>
 <li>Digital signatures should vouch for private key information.</li>
 <li>Encapsulate data into streams and decrease Base-64 conversions. This will result in smaller messages. Previous functionality will be disrupted.</li>
+<li>Guard QList::last().</li>
 <li>Guard QList::removeAt().</li>
 <li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
 <li>Updated NTRU files (05/02/2015).</li>
